src/codegen/tests/snapshots/rusty__codegen__tests__expression_tests__int_and_or_expressions.snap
---
source: src/codegen/tests/expression_tests.rs
assertion_line: 416
expression: result

---
; ModuleID = 'main'
source_filename = "main"

%main_interface = type { i16, i16, i16, i16 }

@main_instance = global %main_interface zeroinitializer

define void @main(%main_interface* %0) {
entry:
  %a = getelementptr inbounds %main_interface, %main_interface* %0, i32 0, i32 0
  %b = getelementptr inbounds %main_interface, %main_interface* %0, i32 0, i32 1
  %c = getelementptr inbounds %main_interface, %main_interface* %0, i32 0, i32 2
  %d = getelementptr inbounds %main_interface, %main_interface* %0, i32 0, i32 3
  %load_a = load i16, i16* %a, align 2
  %1 = sext i16 %load_a to i32
  %load_b = load i16, i16* %b, align 2
  %2 = sext i16 %load_b to i32
  %tmpVar = and i32 %1, %2
  %3 = trunc i32 %tmpVar to i16
  store i16 %3, i16* %c, align 2
  %load_a1 = load i16, i16* %a, align 2
  %4 = sext i16 %load_a1 to i32
  %load_b2 = load i16, i16* %b, align 2
  %5 = sext i16 %load_b2 to i32
  %tmpVar3 = or i32 %4, %5
  %6 = trunc i32 %tmpVar3 to i16
  store i16 %6, i16* %d, align 2
  ret void
}

