src/codegen/tests/snapshots/rusty__codegen__tests__expression_tests__int_to_uint_expt.snap
---
source: src/codegen/tests/expression_tests.rs
expression: result
---
; ModuleID = 'main'
source_filename = "main"

define i32 @main() {
entry:
  %main = alloca i32, align 4
  store i32 0, i32* %main, align 4
  %call = call float @EXPT__REAL__DINT(float 2.000000e+00, i32 3)
  %0 = fptosi float %call to i32
  store i32 %0, i32* %main, align 4
  %main_ret = load i32, i32* %main, align 4
  ret i32 %main_ret
}

declare float @EXPT__REAL__DINT(float, i32)

