src/codegen/tests/snapshots/rusty__codegen__tests__expression_tests__max_int.snap
---
source: src/codegen/tests/expression_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

define signext i16 @main() {
entry:
  %main = alloca i16, align [filtered]
  store i16 0, ptr %main, align [filtered]
  %0 = alloca [7 x i16], align [filtered]
  %1 = getelementptr inbounds [7 x i16], ptr %0, i32 0, i32 0
  store i16 5, ptr %1, align [filtered]
  %2 = getelementptr inbounds [7 x i16], ptr %0, i32 0, i32 1
  store i16 2, ptr %2, align [filtered]
  %3 = getelementptr inbounds [7 x i16], ptr %0, i32 0, i32 2
  store i16 1, ptr %3, align [filtered]
  %4 = getelementptr inbounds [7 x i16], ptr %0, i32 0, i32 3
  store i16 3, ptr %4, align [filtered]
  %5 = getelementptr inbounds [7 x i16], ptr %0, i32 0, i32 4
  store i16 4, ptr %5, align [filtered]
  %6 = getelementptr inbounds [7 x i16], ptr %0, i32 0, i32 5
  store i16 7, ptr %6, align [filtered]
  %7 = getelementptr inbounds [7 x i16], ptr %0, i32 0, i32 6
  store i16 -1, ptr %7, align [filtered]
  %call = call signext i16 @MAX__INT(i32 7, ptr %0)
  store i16 %call, ptr %main, align [filtered]
  %main_ret = load i16, ptr %main, align [filtered]
  ret i16 %main_ret
}

declare signext i16 @MAX__INT(i32, ptr)
