src/codegen/tests/snapshots/rusty__codegen__tests__expression_tests__nested_call_statements.snap
---
source: src/codegen/tests/expression_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%main = type {}

@main_instance = global %main zeroinitializer

define i32 @foo(i32 %0) {
entry:
  %foo = alloca i32, align [filtered]
  %a = alloca i32, align [filtered]
  store i32 %0, i32* %a, align [filtered]
  store i32 0, i32* %foo, align [filtered]
  %foo_ret = load i32, i32* %foo, align [filtered]
  ret i32 %foo_ret
}

define void @main(%main* %0) {
entry:
  %call = call i32 @foo(i32 2)
  %call1 = call i32 @foo(i32 %call)
  ret void
}
