src/codegen/tests/snapshots/rusty__codegen__tests__expression_tests__pointer_arithmetics.snap
---
source: src/codegen/tests/expression_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%main = type { i16, i16, i16* }

@main_instance = global %main { i16 10, i16 20, i16* null }

define void @main(%main* %0) {
entry:
  %x = getelementptr inbounds %main, %main* %0, i32 0, i32 0
  %y = getelementptr inbounds %main, %main* %0, i32 0, i32 1
  %pt = getelementptr inbounds %main, %main* %0, i32 0, i32 2
  store i16* %x, i16** %pt, align [filtered]
  %load_pt = load i16*, i16** %pt, align [filtered]
  %access___main_pt = getelementptr inbounds i16, i16* %load_pt, i32 1
  store i16* %access___main_pt, i16** %pt, align [filtered]
  %load_pt1 = load i16*, i16** %pt, align [filtered]
  %access___main_pt2 = getelementptr inbounds i16, i16* %load_pt1, i32 1
  %access___main_pt3 = getelementptr inbounds i16, i16* %access___main_pt2, i32 1
  store i16* %access___main_pt3, i16** %pt, align [filtered]
  %load_pt4 = load i16*, i16** %pt, align [filtered]
  %access___main_pt5 = getelementptr inbounds i16, i16* %load_pt4, i32 1
  store i16* %access___main_pt5, i16** %pt, align [filtered]
  %load_pt6 = load i16*, i16** %pt, align [filtered]
  %load_y = load i16, i16* %y, align [filtered]
  %1 = sub i16 0, %load_y
  %access___main_pt7 = getelementptr inbounds i16, i16* %load_pt6, i16 %1
  store i16* %access___main_pt7, i16** %pt, align [filtered]
  %load_pt8 = load i16*, i16** %pt, align [filtered]
  %access___main_pt9 = getelementptr inbounds i16, i16* %load_pt8, i32 1
  %access___main_pt10 = getelementptr inbounds i16, i16* %access___main_pt9, i32 1
  store i16* %access___main_pt10, i16** %pt, align [filtered]
  %load_pt11 = load i16*, i16** %pt, align [filtered]
  %load_y12 = load i16, i16* %y, align [filtered]
  %2 = sub i16 0, %load_y12
  %access___main_pt13 = getelementptr inbounds i16, i16* %load_pt11, i16 %2
  %access___main_pt14 = getelementptr inbounds i16, i16* %access___main_pt13, i32 -1
  store i16* %access___main_pt14, i16** %pt, align [filtered]
  %load_pt15 = load i16*, i16** %pt, align [filtered]
  %access___main_pt16 = getelementptr inbounds i16, i16* %load_pt15, i32 2
  store i16* %access___main_pt16, i16** %pt, align [filtered]
  %load_y17 = load i16, i16* %y, align [filtered]
  %load_pt18 = load i16*, i16** %pt, align [filtered]
  %access___main_pt19 = getelementptr inbounds i16, i16* %load_pt18, i16 %load_y17
  %load_y20 = load i16, i16* %y, align [filtered]
  %3 = sub i16 0, %load_y20
  %access___main_pt21 = getelementptr inbounds i16, i16* %access___main_pt19, i16 %3
  store i16* %access___main_pt21, i16** %pt, align [filtered]
  %load_y22 = load i16, i16* %y, align [filtered]
  %4 = sext i16 %load_y22 to i32
  %load_y23 = load i16, i16* %y, align [filtered]
  %5 = sext i16 %load_y23 to i32
  %tmpVar = add i32 %4, %5
  %load_pt24 = load i16*, i16** %pt, align [filtered]
  %access___main_pt25 = getelementptr inbounds i16, i16* %load_pt24, i32 %tmpVar
  store i16* %access___main_pt25, i16** %pt, align [filtered]
  ret void
}
