src/codegen/tests/snapshots/rusty__codegen__tests__expression_tests__pointer_arithmetics_function_call.snap
---
source: src/codegen/tests/expression_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%main = type { i16*, i16 }

@main_instance = global %main zeroinitializer

define i64 @foo() {
entry:
  %foo = alloca i64, align [filtered]
  store i64 0, i64* %foo, align [filtered]
  %foo_ret = load i64, i64* %foo, align [filtered]
  ret i64 %foo_ret
}

define void @main(%main* %0) {
entry:
  %pt = getelementptr inbounds %main, %main* %0, i32 0, i32 0
  %x = getelementptr inbounds %main, %main* %0, i32 0, i32 1
  store i16* %x, i16** %pt, align [filtered]
  %load_pt = load i16*, i16** %pt, align [filtered]
  %call = call i64 @foo()
  %access___main_pt = getelementptr inbounds i16, i16* %load_pt, i64 %call
  store i16* %access___main_pt, i16** %pt, align [filtered]
  ret void
}
