src/codegen/tests/snapshots/rusty__codegen__tests__expression_tests__pointers_in_function_return.snap
---
source: src/codegen/tests/expression_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

define i16* @func() {
entry:
  %func = alloca i16*, align [filtered]
  store i16* null, i16** %func, align [filtered]
  %func_ret = load i16*, i16** %func, align [filtered]
  ret i16* %func_ret
}
